--- a/04-hellocapacitor/package.json
+++ b/04-hellocapacitor/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@capacitor/android": "^3.0.0",
     "@capacitor/camera": "^1.0.0",
     "@capacitor/cli": "^3.0.0",
     "@capacitor/core": "^3.0.0",
