--- a/05-ionic-project/package.json
+++ b/05-ionic-project/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
+    "@capacitor/android": "3.0.0",
     "@capacitor/app": "1.0.0",
     "@capacitor/camera": "^1.0.0",
     "@capacitor/core": "3.0.0",
@@ -27,6 +28,7 @@
     "@ionic/angular": "^5.5.2",
     "@ionic/pwa-elements": "^3.0.2",
     "@ionic/storage-angular": "^3.0.6",
+    "native-run": "^1.3.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
